# sensors2024

./: .gitignore  LICENSE  README.md  nohup.out  pyproject.toml
dev/: test_AE.py  test_autoencoder.py  test_cluster.py
notebooks/: 20230907_shapelets.ipynb  DL_anomaly_detection.ipynb  anomaly_detection.ipynb  data_validation.ipynb  preproc.ipynb  random_tests_1.ipynb
notebooks/DL_clustering/: graphconv.ipynb  kmeans.ipynb  kmeans_optuna_test.ipynb  test_cluster.ipynb
notebooks/DL_detection/: test_autoencoder.ipynb
sensors/nn/: clustering.py  models.py
sensors/utils/: fault_detection.py  utils.py
