[tool.poetry]
name = "sensors"
version = "0.1.0"
description = "Data Analytics"
authors = ["Vitor Elias <vitor.elias@ntnu.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "<1.23"
jupyter = "^1.0.0"
pandas = "^2.1.4"
optuna = "^3.5.0"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
scipy = "1.8.1"
pygsp = "^0.5.1"
pyprojroot = "^0.3.0"
jupyterlab = "^4.0.9"
ipykernel = "^6.27.1"
tensorflow = "2.13.0"
numba = "0.57.1"
torch = "2.0.1"
torchvision = "0.15.2"
torch-geometric = "2.3.1"
torchviz = "0.0.2"
pyarrow = "^14.0.2"
geopandas = "^0.14.2"
statsmodels = "^0.14.1"
tslearn = "^0.6.3"
tsmoothie = "^1.0.5"
ruptures = "^1.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
